apps/tailscale/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-tailscale-backend
  namespace: gitea
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
