apps/tailscale/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-tailscale
  namespace: gitea
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: gitea-http
      port:
        number: 3000
  tls:
    - hosts:
        - gitea-gitea-tailscale
